--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='love.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
 </head>
 <body>
     <h2 class="love">Do You Love Me</h2>
@@ -21,4 +21,5 @@
   </div>
     <script src='love.js'></script>
 </body>
+
 </html>
