--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <button id="restart">أعد الرسم</button>
     <button id="toggleAnim">إيقاف/تشغيل الحركة</button>
   </div>
-    <script src='love.js'></script>
+    <script src='main.js'></script>
 </body>
 
 </html>
+
