--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset='utf-8'>
@@ -13,14 +13,16 @@
   <h2 class="love" id="Ha">Do You Love Me</h2>
 
   <div class="love-buttons">
-    <button class="yes">Yes ,I Adore You</button>
+    <button class="yes">Yes ,I Love You</button>
     <button class="no">No ,I Hate You</button>
   </div>
 
   <canvas id="c" width="520" height="520"></canvas>
 
+  <!-- صورة الحب -->
   <img id="loveImg" src="love.png" alt="In Love">
 
+  <!-- صورة الحزن -->
   <img id="sadImg" src="sad.png" alt="Sad" width="400px">
 
   <div class="controls">
@@ -31,9 +33,10 @@
     <button id="toggleAnim">Stop Move</button>
   </div>
 
+  <!-- مشغل الأغنية -->
+  <audio id="loveSong" src="fadel.mp3"></audio>
+
   <script src='main.js'></script>
 </body>
 
 </html>
-
-
