--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h2 class="love" id="Ha">Do You Love Me</h2>
 
   <div class="love-buttons">
-    <button class="yes">Yes ,I Love You</button>
+    <button class="yes">Yes ,I Love You So Much</button>
     <button class="no">No ,I Hate You</button>
   </div>
 
@@ -40,3 +40,4 @@
 </body>
 
 </html>
+
